--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,15 @@
 Package: scifi
 Title: Statistical Climate Forecasting Integrated for Civil and Environmental Engineering
-Version: 0.8.5
+Version: 0.9.5
 Authors@R: c(
     person(given = "Yuchuan", family = "Lai", role = "cre", email = "ylai1@andrew.cmu.edu"),
     person(given = "David A.", family = "Dzombak", role = "aut", email = "dzombak@cmu.edu"))
-Description: Obtain the ARIMA based statistical forecasting of temperature and precipitation at individual 
-    city for engineering applications. Forecasting techniques include the annual temperature an precipitation
-    forecasting, estimating confidence levels for annual extremes with return periods, and simulating future 
-    daily temperature and precipitation. Additional functions for downloading available historical observations 
-    from more than 100 US cities, annual forecasting of other statistical techniques, and plotting the obtained 
-    forecasts are provided.
+Description: Obtain the ARIMA based statistical forecasting or the GARIMA projections of temperature and 
+    precipitation at individual city for engineering applications. Forecasting techniques include the 
+    annual temperature an precipitation forecasting, estimating confidence levels for annual extremes with return 
+    periods, and simulating future daily temperature and precipitation.
+    Additional functions for downloading available historical observations from more than 100 US cities, 
+    annual forecasting of other statistical techniques, and plotting the obtained forecasts are provided.
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
@@ -25,4 +25,6 @@ Imports:
     reshape2,
     xts,
     zoo
-RoxygenNote: 6.1.1
+RoxygenNote: 7.1.1
+Depends: 
+    R (>= 2.10)
